slightly more blue

--- a/energymodel_webjs/index.html
+++ b/energymodel_webjs/index.html
@@ -4,7 +4,8 @@
 <style>
 
     :root {
-        --main-color: #7597ce;
+        /*--main-color: #7597ce;*/
+        --main-color: #0699fa;
     }
     
     #bound {
