--- a/index.html
+++ b/index.html
@@ -731,7 +731,7 @@ You can also download the full ten year hourly model used for ZCB <a href="https
 
         totalHeatDemand = 0;
         
-        max_shortfall = 0
+        max_shortfall = 0;
         
         // ------------------------------
         // Heat storage
